--- a/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
@@ -142,9 +142,8 @@ spec:
                           description: KRM-style annotations for the resource.
                           type: object
                         containers:
-                          description: Holds the single container that defines the
-                            unit of execution for this task. Structure is documented
-                            below.
+                          description: Holds the containers that define the unit of
+                            execution for this Service. Structure is documented below.
                           items:
                             properties:
                               args:
@@ -1248,9 +1247,8 @@ spec:
                           description: KRM-style annotations for the resource.
                           type: object
                         containers:
-                          description: Holds the single container that defines the
-                            unit of execution for this task. Structure is documented
-                            below.
+                          description: Holds the containers that define the unit of
+                            execution for this Service. Structure is documented below.
                           items:
                             properties:
                               args:
