--- a/package/crds/compute.gcp.upbound.io_images.yaml
+++ b/package/crds/compute.gcp.upbound.io_images.yaml
@@ -93,7 +93,8 @@ spec:
                             guest operating system features to see a list of available
                             options. Possible values are: MULTI_IP_SUBNET, SECURE_BOOT,
                             SEV_CAPABLE, UEFI_COMPATIBLE, VIRTIO_SCSI_MULTIQUEUE,
-                            WINDOWS, GVNIC, SEV_LIVE_MIGRATABLE.'
+                            WINDOWS, GVNIC, SEV_LIVE_MIGRATABLE, SEV_SNP_CAPABLE,
+                            SUSPEND_RESUME_COMPATIBLE, TDX_CAPABLE.'
                           type: string
                       required:
                       - type
@@ -172,6 +173,12 @@ spec:
                       In order to create an image, you must provide the full or partial
                       URL of one of the following:'
                     type: string
+                  storageLocations:
+                    description: 'Cloud Storage bucket storage location of the image
+                      (regional or multi-regional). Reference link: https://cloud.google.com/compute/docs/reference/rest/v1/images'
+                    items:
+                      type: string
+                    type: array
                 type: object
               managementPolicy:
                 default: FullControl
@@ -397,7 +404,8 @@ spec:
                             guest operating system features to see a list of available
                             options. Possible values are: MULTI_IP_SUBNET, SECURE_BOOT,
                             SEV_CAPABLE, UEFI_COMPATIBLE, VIRTIO_SCSI_MULTIQUEUE,
-                            WINDOWS, GVNIC, SEV_LIVE_MIGRATABLE.'
+                            WINDOWS, GVNIC, SEV_LIVE_MIGRATABLE, SEV_SNP_CAPABLE,
+                            SUSPEND_RESUME_COMPATIBLE, TDX_CAPABLE.'
                           type: string
                       type: object
                     type: array
@@ -482,6 +490,12 @@ spec:
                       In order to create an image, you must provide the full or partial
                       URL of one of the following:'
                     type: string
+                  storageLocations:
+                    description: 'Cloud Storage bucket storage location of the image
+                      (regional or multi-regional). Reference link: https://cloud.google.com/compute/docs/reference/rest/v1/images'
+                    items:
+                      type: string
+                    type: array
                 type: object
               conditions:
                 description: Conditions of the resource.
