--- a/examples-generated/firebaserules/release.yaml
+++ b/examples-generated/firebaserules/release.yaml
@@ -11,7 +11,7 @@ spec:
     project: my-project-name
     rulesetNameSelector:
       matchLabels:
-        testing.upbound.io/example-name: basic
+        testing.upbound.io/example-name: firestore
 
 ---
 
@@ -21,29 +21,8 @@ metadata:
   annotations:
     meta.upbound.io/example-id: firebaserules/v1beta1/release
   labels:
-    testing.upbound.io/example-name: basic
-  name: basic
-spec:
-  forProvider:
-    project: my-project-name
-    source:
-    - files:
-      - content: 'service cloud.firestore {match /databases/{database}/documents {
-          match /{document=**} { allow read, write: if false; } } }'
-        fingerprint: ""
-        name: firestore.rules
-      language: ""
-
----
-
-apiVersion: firebaserules.gcp.upbound.io/v1beta1
-kind: Ruleset
-metadata:
-  annotations:
-    meta.upbound.io/example-id: firebaserules/v1beta1/release
-  labels:
-    testing.upbound.io/example-name: minimal
-  name: minimal
+    testing.upbound.io/example-name: firestore
+  name: firestore
 spec:
   forProvider:
     project: my-project-name
