--- a/package/crds/container.gcp.upbound.io_clusters.yaml
+++ b/package/crds/container.gcp.upbound.io_clusters.yaml
@@ -589,8 +589,8 @@ spec:
                     items:
                       properties:
                         channel:
-                          description: Which Gateway Api channel should be used. CHANNEL_DISABLED
-                            or CHANNEL_STANDARD.
+                          description: Which Gateway Api channel should be used. CHANNEL_DISABLED,
+                            CHANNEL_EXPERIMENTAL or CHANNEL_STANDARD.
                           type: string
                       required:
                       - channel
@@ -2423,8 +2423,8 @@ spec:
                     items:
                       properties:
                         channel:
-                          description: Which Gateway Api channel should be used. CHANNEL_DISABLED
-                            or CHANNEL_STANDARD.
+                          description: Which Gateway Api channel should be used. CHANNEL_DISABLED,
+                            CHANNEL_EXPERIMENTAL or CHANNEL_STANDARD.
                           type: string
                       type: object
                     type: array
