--- a/examples/compute/sharedvpcserviceproject.yaml
+++ b/examples/compute/sharedvpcserviceproject.yaml
@@ -3,11 +3,13 @@ kind: SharedVPCServiceProject
 metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/sharedvpcserviceproject
-    upjet.upbound.io/manual-intervention: "Only supports this permission at project or organizational level currently"
+    upjet.upbound.io/manual-intervention: "This resource depends on an existed service project"
   labels:
     testing.upbound.io/example-name: service1
   name: service1
 spec:
   forProvider:
-    hostProject: host-project-id
-    serviceProject: service-project-id-1
+    hostProject: ${data.cloudplatform_project.projectId}
+    serviceProjectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
