--- a/examples/accesscontextmanager/serviceperimeterresource.yaml
+++ b/examples/accesscontextmanager/serviceperimeterresource.yaml
@@ -40,6 +40,6 @@ metadata:
 spec:
   forProvider:
     perimeterName: ${google_access_context_manager_service_perimeter.service-perimeter-resource.name}
-
+    resource: ${data.google_project.project.number}
 ---
 
