--- a/examples/accesscontextmanager/accesslevelcondition.yaml
+++ b/examples/accesscontextmanager/accesslevelcondition.yaml
@@ -3,6 +3,7 @@ kind: AccessLevelCondition
 metadata:
   annotations:
     meta.upbound.io/example-id: accesscontextmanager/v1beta1/accesslevelcondition
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
   labels:
     testing.upbound.io/example-name: access-level-conditions
   name: access-level-conditions
@@ -35,6 +36,7 @@ kind: AccessLevel
 metadata:
   annotations:
     meta.upbound.io/example-id: accesscontextmanager/v1beta1/accesslevelcondition
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
   labels:
     testing.upbound.io/example-name: access-level-service-account
   name: access-level-service-account
@@ -63,6 +65,7 @@ kind: AccessPolicy
 metadata:
   annotations:
     meta.upbound.io/example-id: accesscontextmanager/v1beta1/accesslevelcondition
+    upjet.upbound.io/manual-intervention: "Requires organization level IAM permissions"
   labels:
     testing.upbound.io/example-name: access-policy
   name: access-policy
