Fixes a typo on the required format for an identity provider when using workload identity federation.
Signed-off-by: Jason Tang <jason@upbound.io>

--- a/package/crds/gcp.upbound.io_providerconfigs.yaml
+++ b/package/crds/gcp.upbound.io_providerconfigs.yaml
@@ -119,7 +119,7 @@ spec:
                         properties:
                           providerID:
                             description: ProviderID is the fully-qualified identifier
-                              for the identity provider on GCP. The format is `project/<project-id>/locations/global/workloadIdentityPools/<identity-pool>/providers/<identity-provider>`.
+                              for the identity provider on GCP. The format is `projects/<project-id>/locations/global/workloadIdentityPools/<identity-pool>/providers/<identity-provider>`.
                             minLength: 1
                             type: string
                           serviceAccount:
