--- a/package/crds/accesscontextmanager.gcp.upbound.io_accesslevels.yaml
+++ b/package/crds/accesscontextmanager.gcp.upbound.io_accesslevels.yaml
@@ -263,79 +263,6 @@ spec:
                     description: 'The AccessPolicy this AccessLevel lives in. Format:
                       accessPolicies/{policy_id}'
                     type: string
-                  parentRef:
-                    description: Reference to a AccessPolicy to populate parent.
-                    properties:
-                      name:
-                        description: Name of the referenced object.
-                        type: string
-                      policy:
-                        description: Policies for referencing.
-                        properties:
-                          resolution:
-                            default: Required
-                            description: Resolution specifies whether resolution of
-                              this reference is required. The default is 'Required',
-                              which means the reconcile will fail if the reference
-                              cannot be resolved. 'Optional' means this reference
-                              will be a no-op if it cannot be resolved.
-                            enum:
-                            - Required
-                            - Optional
-                            type: string
-                          resolve:
-                            description: Resolve specifies when this reference should
-                              be resolved. The default is 'IfNotPresent', which will
-                              attempt to resolve the reference only when the corresponding
-                              field is not present. Use 'Always' to resolve the reference
-                              on every reconcile.
-                            enum:
-                            - Always
-                            - IfNotPresent
-                            type: string
-                        type: object
-                    required:
-                    - name
-                    type: object
-                  parentSelector:
-                    description: Selector for a AccessPolicy to populate parent.
-                    properties:
-                      matchControllerRef:
-                        description: MatchControllerRef ensures an object with the
-                          same controller reference as the selecting object is selected.
-                        type: boolean
-                      matchLabels:
-                        additionalProperties:
-                          type: string
-                        description: MatchLabels ensures an object with matching labels
-                          is selected.
-                        type: object
-                      policy:
-                        description: Policies for selection.
-                        properties:
-                          resolution:
-                            default: Required
-                            description: Resolution specifies whether resolution of
-                              this reference is required. The default is 'Required',
-                              which means the reconcile will fail if the reference
-                              cannot be resolved. 'Optional' means this reference
-                              will be a no-op if it cannot be resolved.
-                            enum:
-                            - Required
-                            - Optional
-                            type: string
-                          resolve:
-                            description: Resolve specifies when this reference should
-                              be resolved. The default is 'IfNotPresent', which will
-                              attempt to resolve the reference only when the corresponding
-                              field is not present. Use 'Always' to resolve the reference
-                              on every reconcile.
-                            enum:
-                            - Always
-                            - IfNotPresent
-                            type: string
-                        type: object
-                    type: object
                   title:
                     description: Human readable title. Must be unique within the Policy.
                     type: string
@@ -529,6 +456,8 @@ spec:
             x-kubernetes-validations:
             - message: name is a required parameter
               rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.name)
+            - message: parent is a required parameter
+              rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.parent)
             - message: title is a required parameter
               rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.title)
           status:
